# wikipad

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.ac.in  libtool  wikipad.desktop  wikipad.desktop.in.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: .intltool-merge-cache  Makefile  Makefile.in  POTFILES  ar.gmo  ast.gmo  bg.gmo  ca.gmo  cs.gmo  da.gmo  de.gmo  el.gmo  en_AU.gmo  en_GB.gmo  es.gmo  eu.gmo  fi.gmo  gl.gmo  he.gmo  hr.gmo  hu.gmo  id.gmo  is.gmo  it.gmo  ja.gmo  kk.gmo  ko.gmo  lt.gmo  ms.gmo  nb.gmo  nl.gmo  nn.gmo  oc.gmo  pl.gmo  pt.gmo  pt_BR.gmo  ro.gmo  ru.gmo  sk.gmo  sr.gmo  (+8 more)
wikipad/: Makefile  Makefile.am  Makefile.in  main.c  org.phm.wikipad.gschema.xml  org.xfce.wikipad.gschema.xml  wikipad  wikipad-action-group.c  wikipad-action-group.h  wikipad-application.c  wikipad-application.h  wikipad-close-button.c  wikipad-close-button.h  wikipad-dbus-infos.h  wikipad-dbus-infos.xml  wikipad-dbus.c  wikipad-dbus.h  wikipad-dialogs.c  wikipad-dialogs.h  wikipad-document.c  wikipad-document.h  wikipad-encoding-dialog.c  wikipad-encoding-dialog.h  wikipad-encoding.c  wikipad-encoding.h  wikipad-file.c  wikipad-file.h  wikipad-gtkcompat.h  wikipad-language-action.c  wikipad-language-action.h  wikipad-marshal.c  wikipad-marshal.h  wikipad-prefs-dialog-ui.h  wikipad-prefs-dialog.c  wikipad-prefs-dialog.h  wikipad-print.c  wikipad-print.h  wikipad-private.h  wikipad-replace-dialog.c  wikipad-replace-dialog.h  (+18 more)
wikipad/.deps/: wikipad-main.Po  wikipad-wikipad-action-group.Po  wikipad-wikipad-application.Po  wikipad-wikipad-close-button.Po  wikipad-wikipad-dbus.Po  wikipad-wikipad-dialogs.Po  wikipad-wikipad-document.Po  wikipad-wikipad-encoding-dialog.Po  wikipad-wikipad-encoding.Po  wikipad-wikipad-file.Po  wikipad-wikipad-language-action.Po  wikipad-wikipad-marshal.Po  wikipad-wikipad-prefs-dialog.Po  wikipad-wikipad-print.Po  wikipad-wikipad-replace-dialog.Po  wikipad-wikipad-search-bar.Po  wikipad-wikipad-settings-store.Po  wikipad-wikipad-settings.Po  wikipad-wikipad-statusbar.Po  wikipad-wikipad-style-scheme-action.Po  wikipad-wikipad-util.Po  wikipad-wikipad-view.Po  wikipad-wikipad-window.Po
